--- a/ansible/tasks/main.yml
+++ b/ansible/tasks/main.yml
@@ -1,2 +1,10 @@
 ---
 # tasks file for ansible_demo
+- name: Print
+ hosts: all
+ vars:
+   project_name: ""
+
+ tasks:
+   - name: print single project name
+     shell: echo "{{ project_name }}"
