--- a/ansible/tasks/main.yml
+++ b/ansible/tasks/main.yml
@@ -7,3 +7,7 @@
   tasks:
     - name: print single project name
       shell: echo "{{ project }}"
+      
+    - name: print stdout
+      debug:
+        msg: ""
